<resources>
    <!--로그인-->
    <string name="app_name">DoDamDoDam</string>
    <string name="id_hint">아이디를 입력하세요.</string>
    <string name="hint_password">비밀번호를 입력하세요.</string>
    <string name="btn_login">로그인</string>
    <string name="btn_register">회원 가입</string>
    <string name="btn_kakao_login">카카오 버튼 들어갈 예정</string>
    <string name="kakaoApi">e9675dee06af842c2a1c9942824329b3</string>
    <string name="kakao_logout">카카오 로그아웃 버튼 들어갈 에정</string>

    <!--회원가입-->
    <string name="txt_register">회원가입</string>
    <string name="join_email">이메일</string>
    <string name="join_password">비밀번호</string>
    <string name="join_passChk">비밀번호 확인</string>
    <string name="title_activity_maps">Map</string>

    <!--구글 MAP API-->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA-EL3j5jkZ3_qh5L17zEGgOCDqN9j7b2g</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_youtube">youtube</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>