<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quantum_amber50">

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_register"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/join_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/join_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/join_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/join_password"
        app:layout_constraintEnd_toStartOf="@+id/check_button"
        app:layout_constraintStart_toStartOf="@+id/join_password" />

    <EditText
        android:id="@+id/join_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/join_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/join_passChk"
        app:layout_constraintStart_toStartOf="@+id/join_passChk" />


    <EditText
        android:id="@+id/join_passChk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:ems="10"
        android:hint="@string/join_passChk"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="68dp"
        android:background="@color/ButtonColor"
        android:text="취소"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/join_button"
        app:layout_constraintTop_toBottomOf="@+id/join_passChk" />

    <Button
        android:id="@+id/join_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/ButtonColor"
        android:text="가입"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/delete"
        app:layout_constraintStart_toStartOf="@+id/join_passChk" />

    <ImageButton
        android:id="@+id/check_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@color/quantum_amber50"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/join_email"
        app:srcCompat="@drawable/check" />


</androidx.constraintlayout.widget.ConstraintLayout>